src/objects/sked_Medication__c.object
<CustomObject>
    <fields>
        <fullName>sked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medication</relationshipLabel>
        <relationshipName>sked_Medication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Administration_Method__c</fullName>
        <label>Administration Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Dosage__c</fullName>
        <label>Dosage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_EHR_Medication_Prescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EHR Medication Prescription</label>
        <referenceTo>HealthCloudGA__EhrMedicationPrescription__c</referenceTo>
        <relationshipLabel>Medication</relationshipLabel>
        <relationshipName>sked_Medication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medication</relationshipLabel>
        <relationshipName>sked_Medication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sked_Support_Plan__c</fullName>
        <label>Support Plan</label>
        <referenceTo>sked_Support_Plan__c</referenceTo>
        <relationshipLabel>sked_Medication</relationshipLabel>
        <relationshipName>sked_Medication</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Medication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medication</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>